syntax = "proto3";

package kv;

option go_package = "gen/go/kv";

service KeyValueStore {
  rpc SetValue(SetRequest) returns (SetResponse);
  rpc GetValue(GetRequest) returns (GetResponse);
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}